--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "build.sh",
-      "use": "@vercel/static-build"
+      "use": "@vercel/static-build",
+      "config": { "distDir": ".vercel/output/static" }
     },
     {
       "src": "scm_survey/wsgi.py",
