--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,9 @@
       }
     }
   ],
+  "env": { "DJANGO_SETTINGS_MODULE": "scm_survey.settings", // Adjust based on your actual project structure
+
+    },
   "routes": [
     {
       "src": "/static/(.*)",
