--- a/vercel.json
+++ b/vercel.json
@@ -15,9 +15,8 @@
       }
     }
   ],
-  "env": { "DJANGO_SETTINGS_MODULE": "scm_survey.settings", // Adjust based on your actual project structure
-
-    },
+  "env": [{ "DJANGO_SETTINGS_MODULE": "scm_survey.settings"
+    }],
   "routes": [
     {
       "src": "/static/(.*)",
